pkg/ibmvpc/examples/out/analysis_out/tgw_larger_example_all_vpcs_subnetsBased_withPGW.txt
Connectivity between VPCs connected by TGW local-tg-ky (UID: crn:578)
test-vpc1-ky/subnet11-ky => test-vpc2-ky/subnet21-ky : All Connections
test-vpc1-ky/subnet12-ky => test-vpc2-ky/subnet21-ky : All Connections
test-vpc2-ky/subnet21-ky => test-vpc1-ky/subnet11-ky : All Connections
test-vpc2-ky/subnet21-ky => test-vpc1-ky/subnet12-ky : All Connections
test-vpc2-ky/subnet21-ky => test-vpc3-ky/subnet31-ky : All Connections
test-vpc2-ky/subnet21-ky => test-vpc3-ky/subnet32-ky : All Connections
test-vpc3-ky/subnet31-ky => test-vpc1-ky/subnet11-ky : protocol: ICMP,UDP
test-vpc3-ky/subnet31-ky => test-vpc1-ky/subnet11-ky : protocol: TCP * 
test-vpc3-ky/subnet31-ky => test-vpc1-ky/subnet12-ky : protocol: ICMP,UDP
test-vpc3-ky/subnet31-ky => test-vpc1-ky/subnet12-ky : protocol: TCP * 
test-vpc3-ky/subnet31-ky => test-vpc2-ky/subnet21-ky : All Connections
test-vpc3-ky/subnet32-ky => test-vpc2-ky/subnet21-ky : All Connections

Connectivity between VPCs connected by TGW local-tg-zn (UID: crn:574)
zn-vpc1/zn-vpc1-net1 => zn-vpc2/zn-vpc2-net1 : All Connections
zn-vpc2/zn-vpc2-net1 => zn-vpc1/zn-vpc1-net1 : All Connections

Subnet connectivity for VPC test-vpc0-ky
subnet1-ky => Public Internet 172.217.22.46/32 : All Connections
subnet1-ky => subnet3-ky : protocol: TCP src-ports: 1-442,444-65535 dst-ports: 443; protocol: TCP src-ports: 443
subnet2-ky => Public Internet (all ranges) : All Connections
subnet3-ky => subnet1-ky : protocol: TCP src-ports: 1-442,444-65535 dst-ports: 443; protocol: TCP src-ports: 443

Subnet connectivity for VPC test-vpc1-ky
subnet11-ky => subnet12-ky : All Connections
subnet12-ky => subnet11-ky : All Connections

Subnet connectivity for VPC test-vpc2-ky
<nothing to report>

Subnet connectivity for VPC test-vpc3-ky
subnet31-ky => subnet32-ky : All Connections
subnet32-ky => subnet31-ky : All Connections

Subnet connectivity for VPC zn-vpc1
<nothing to report>

Subnet connectivity for VPC zn-vpc2
<nothing to report>

connections are responsive (on TCP) unless marked with *
